--- a/my_preproc.ipynb
+++ b/my_preproc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -12,7 +12,6 @@
    "outputs": [],
    "source": [
     "# import stuff\n",
-    "%matplotlib inline\n",
     "\n",
     "from __future__ import print_function\n",
     "from __future__ import division\n",
@@ -31,31 +30,12 @@
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn import metrics\n",
-    "from pyts.preprocessing import InterpolationImputer\n",
-    "\n",
-    "# just for the sake of this blog post!\n",
-    "from warnings import filterwarnings\n",
-    "filterwarnings('ignore')\n",
-    "\n",
-    "# load the provided data\n",
-    "train_features = pd.read_csv('data-processed/dengue_features_train.csv',\n",
-    "                             index_col=[0,1,2])\n",
-    "\n",
-    "train_labels = pd.read_csv('data-processed/dengue_labels_train.csv',\n",
-    "                           index_col=[0,1,2])\n",
-    "\n",
-    "# Seperate data for San Juan\n",
-    "sj_train_features = train_features.loc['sj']\n",
-    "sj_train_labels = train_labels.loc['sj']\n",
-    "\n",
-    "# Separate data for Iquitos\n",
-    "iq_train_features = train_features.loc['iq']\n",
-    "iq_train_labels = train_labels.loc['iq']"
+    "from pyts.preprocessing import InterpolationImputer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -63,7 +43,7 @@
    "source": [
     "# run all preprocessing steps on both cities, then in last step seperate them\n",
     "\n",
-    "# load data\n",
+    "# data paths\n",
     "X_path = 'data-processed/dengue_features_train.csv'\n",
     "y_path = \"data-processed/dengue_labels_train.csv\"\n",
     "\n",
@@ -76,10 +56,14 @@
     "    df = pd.read_csv(X_path, index_col=[0, 1, 2])\n",
     "    df = df.drop('week_start_date',axis=1)#[features]\n",
     "\n",
-    "    # fill missing values with interpolation\n",
+    "    ### fill missing values with interpolation ###\n",
+    "    \n",
     "    df.fillna(method='bfill', inplace=True) # bfill: use next valid observation to fill gap\n",
     "\n",
-    "    ### add lag ###\n",
+    "    ### add lag of 3 weeks for 4 variables below ###\n",
+    "    \n",
+    "    # and remove original ones\n",
+    "    # max temp, precipitation, humidity and avgerage temp \n",
     "    lag        = 3\n",
     "    var2change = ['station_max_temp_c', \n",
     "                  'station_precip_mm',\n",
@@ -99,10 +83,16 @@
     "    df.fillna(method='bfill', inplace=True)\n",
     "\n",
     "    \n",
-    "    ### create interaction feature: humidity above 42 % temperature above 26 degrees\n",
+    "    ### create interaction features\n",
     "    \n",
-    "    df['Humid_X_Temp26'] = np.where((df['reanalysis_relative_humidity_percent_lag'] >= 42) & (df['station_avg_temp_c_lag'] >= 26), 1, 0)    \n",
+    "    # humidity above 42 % temperature above 24 degrees\n",
+    "    df['Humid_X_Temp26'] = np.where((df['reanalysis_relative_humidity_percent_lag'] >= 42) & (df['station_avg_temp_c_lag'] >= 24), 1, 0)\n",
+    "    \n",
+    "    # below one did not work\n",
+    "    # temperature after rain. Use rain vs. lagged temp var\n",
+    "    # df['Temp_X_rain'] = np.where((df['station_precip_mm_lag'] >= 600) & (df['station_avg_temp_c_lag'] >= 24), 1, 0)\n",
     "\n",
+    "    # if its not submission, load y data\n",
     "    if labels==True:\n",
     "        # add predictor to DF to seperate the cities\n",
     "        y_path = \"data-processed/dengue_labels_train.csv\"\n",
@@ -132,46 +122,38 @@
     "    return X_sj, y_sj, X_iq, y_iq\n",
     "\n",
     "# remove df later again, just for debugging\n",
-    "[X_sj, y_sj, X_iq, y_iq] = preprocess_data( X_path, True)\n"
+    "[X_sj, y_sj, X_iq, y_iq] = preprocess_data( X_path, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# run OLS, check for non-important variables\n",
+    "# removing variables based on OLS didn't improve things\n",
     "\n",
-    "X = sm.add_constant(X_sj, prepend=False)\n",
-    "y = y_sj\n",
+    "# # run OLS, check for non-important variables\n",
+    "# X = sm.add_constant(X_sj, prepend=False)\n",
+    "# y = y_sj\n",
     "\n",
     "# Fit and summarize OLS model\n",
-    "mod = sm.OLS(y, X).fit()\n",
-    "#print(mod.summary())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 292,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "# mod = sm.OLS(y, X).fit()\n",
+    "# print(mod.summary())\n",
+    "\n",
     "# remove some unimportant regressors for San Juan accoding to OLS\n",
-    "#X_sj = X_sj.drop(columns=['ndvi_se','ndvi_sw'])"
+    "# X_sj = X_sj.drop(columns=['ndvi_se','ndvi_sw'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Seperate X into prior and future train vs. test sets\n",
+    "# Seperate data into train 3/4 vs. test 1/4\n",
     "\n",
     "# San Juan is 936 x 21\n",
     "X_sj_train = X_sj.iloc[1:701]\n",
@@ -179,15 +161,8 @@
     "\n",
     "# Iquitos is 520x20: split 390 vs 130\n",
     "X_iq_train = X_iq.iloc[1:391]\n",
-    "X_iq_test = X_iq.iloc[391:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 294,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "X_iq_test = X_iq.iloc[391:]\n",
+    "\n",
     "# SJ\n",
     "y_sj_train = y_sj.iloc[1:701]\n",
     "y_sj_test  = y_sj.iloc[701:]\n",
@@ -199,28 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "San Juan: 1153.9744680851063\n",
-      "Iquitos: 159.5503875968992\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# my version benchmarking function\n",
-    "\n",
-    "# San Juan\n",
-    "# best alpha =  1e-08\n",
-    "# best score =  756.9779411764706\n",
-    "\n",
-    "# Peru\n",
-    "# best alpha =  1e-08\n",
-    "# best score =  119.31666666666666\n",
+    "# get MSE to assess preprocessing changes\n",
     "\n",
     "def get_score(X_train, y_train, X_test, y_test):\n",
     "    \n",
@@ -242,82 +200,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# baseline model with 4 features: 1802.2099802009457\n",
-    "# baseline model with all features: 1458.708840425532 \n",
-    "\n",
-    "# experiment on interpolation\n",
-    "# after interpolation with 4 feature: 1906.9913617021275 \n",
-    "# after interpolation with all features 1762.8954468085103 with all features using ffill\n",
-    "# after interpolation with all features 11281.0836463829787 with all features using bfill\n",
-    "\n",
-    "# experiment on lag, removing original avg_temp\n",
-    "# baseline model, 4 features, bfill: 1281.0836463829787\n",
-    "# baseline model, 4 features, bfill, lagged by 1 avg, temp: 1623.894638297872\n",
-    "# baseline model, 4 features, bfill, lagged by 2 avg, temp: 1454.7012340425533\n",
-    "# baseline model, 4 features, bfill, lagged by 3 avg, temp: 1361.6014042553193\n",
-    "\n",
-    "# experiment on lag, keeping original avg_temp\n",
-    "# baseline model, 4 features, bfill: 1281.0836463829787\n",
-    "# baseline model, 4 features, bfill, lagged by 1 avg, temp:\n",
-    "\n",
-    "# experiment on lag, removing original humidity\n",
-    "# 1 weeks: 1538.7760425531915\n",
-    "# 2 weeks: 1617.551914893617\n",
-    "# 3 weeks: 1429.1278297872343\n",
-    "\n",
-    "# experiment on lag, keeping original humidity\n",
-    "# 2 weeks: 1617.551914893617\n",
-    "# 1458.708840425532\n",
-    "# 1524.5711259574466\n",
-    "\n",
-    "# 3 week lag, max temp, removing original, bfill\n",
-    "# 1221.451829787234 \n",
-    "\n",
-    "# max and precipitation\n",
-    "# 1185.6852765957449\n",
-    "\n",
-    "# max, precip and humidity\n",
-    "# 1135.5494893617022\n",
-    "\n",
-    "# removing SE and SW\n",
-    "#1128.7711063829786\n",
-    "\n",
-    "# interaction\n",
-    "# San Juan: 1153.9744680851063\n",
-    "# Iquitos: 159.5503875968992"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 287,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# list of changes to keep\n",
-    "\n",
-    "### BETTER ###\n",
-    "# fill missing values\n",
-    "# df.fillna(method='bfill', inplace=True) better than ffill\n",
-    "\n",
-    "\n",
-    "### Worse ###\n",
-    "# avg_temp lag of 1-4 all worse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Submission file\n",
     "sj_test, sj_y, iq_test, iq_y = preprocess_data('data-processed/dengue_features_test.csv', False)\n",
     "\n",
     "sj_predictions = model_sj.predict(sj_test).astype(int)\n",
@@ -327,7 +214,7 @@
     "                         index_col=[0, 1, 2])\n",
     "\n",
     "submission.total_cases = np.concatenate([sj_predictions, iq_predictions])\n",
-    "submission.to_csv(\"data-processed/our_model1.csv\")"
+    "submission.to_csv(\"data-processed/our_model2.csv\")"
    ]
   }
  ],
