add input options to preprocessing function

--- a/my_preproc.ipynb
+++ b/my_preproc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -29,46 +29,57 @@
     "import statsmodels.formula.api as smf\n",
     "\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn import metrics\n",
-    "from pyts.preprocessing import InterpolationImputer"
+    "from sklearn import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# run all preprocessing steps on both cities, then in last step seperate them\n",
+    "# preprocessing function\n",
     "\n",
-    "# data paths\n",
-    "X_path = 'data-processed/dengue_features_train.csv'\n",
-    "y_path = \"data-processed/dengue_labels_train.csv\"\n",
-    "\n",
-    "def preprocess_data( X_path, labels):\n",
+    "def preprocess_data(X_path, interpolation, norm, mylag, interaction, ylabels):\n",
     "    \n",
     "    # Input: \n",
-    "    # labels: logical true or false whether we have y (because submission data does not)\n",
+    "        # interpolation: bool, True=backfill, False=forward fill\n",
+    "        # norm: True=normalization, false= standardization\n",
+    "        # mylag: 1= 1 week for example, use 0 for no lag\n",
+    "        # interaction: True or False\n",
+    "        # ylabels: logical true or false whether we have y (because submission data does not)\n",
     "    \n",
     "    # load data and set index to city, year, weekofyear and remove week_start_date\n",
     "    df = pd.read_csv(X_path, index_col=[0, 1, 2])\n",
     "    df = df.drop('week_start_date',axis=1)#[features]\n",
     "\n",
     "    ### fill missing values with interpolation ###\n",
-    "    \n",
-    "    df.fillna(method='bfill', inplace=True) # bfill: use next valid observation to fill gap\n",
+    "    if interpolation==True:\n",
+    "        mymethod = 'bfill'\n",
+    "    else:\n",
+    "        mymethod = 'bfill'\n",
+    "        \n",
+    "    # implement it    \n",
+    "    df.fillna(method=mymethod, inplace=True) # bfill: use next valid observation to fill gap\n",
     "\n",
+    "    ### normalization ###\n",
+    "    if norm==True:\n",
+    "        df = (df - df.min()) / (df.max() - df.min()) # min-max scaling\n",
+    "    else:\n",
+    "        df = (df - df.mean()) / df.std() # standarization\n",
+    "    \n",
     "    ### add lag of 3 weeks for 4 variables below ###\n",
     "    \n",
     "    # and remove original ones\n",
     "    # max temp, precipitation, humidity and avgerage temp \n",
-    "    lag        = 3\n",
-    "    var2change = ['station_max_temp_c', \n",
-    "                  'station_precip_mm',\n",
-    "                  'reanalysis_relative_humidity_percent',\n",
-    "                  'station_avg_temp_c']\n",
+    "    lag        = mylag\n",
+    "    var2change =  list(df.columns.values)\n",
+    "    #['station_max_temp_c', \n",
+    "                  #'station_precip_mm',\n",
+    "                  #'reanalysis_relative_humidity_percent',\n",
+    "                  #'station_avg_temp_c']\n",
     "\n",
     "    new_names = []\n",
     "    for i,j in enumerate(var2change):\n",
@@ -80,13 +91,14 @@
     "        df = df.drop(var2change[i],axis=1)\n",
     "\n",
     "    # remove missing values again because of lag\n",
-    "    df.fillna(method='bfill', inplace=True)\n",
+    "    df.fillna(method=mymethod, inplace=True)\n",
     "\n",
     "    \n",
     "    ### create interaction features\n",
     "    \n",
     "    # humidity above 42 % temperature above 24 degrees\n",
-    "    df['Humid_X_Temp26'] = np.where((df['reanalysis_relative_humidity_percent_lag'] >= 42) & (df['station_avg_temp_c_lag'] >= 24), 1, 0)\n",
+    "    if interaction==True:\n",
+    "        df['Humid_X_Temp26'] = np.where((df['reanalysis_relative_humidity_percent_lag'] >= 42) & (df['station_avg_temp_c_lag'] >= 24), 1, 0)\n",
     "    \n",
     "    # below one did not work\n",
     "    # temperature after rain. Use rain vs. lagged temp var\n",
@@ -119,15 +131,42 @@
     "        y_sj = []\n",
     "        y_iq = []\n",
     "            \n",
-    "    return X_sj, y_sj, X_iq, y_iq\n",
-    "\n",
-    "# remove df later again, just for debugging\n",
-    "[X_sj, y_sj, X_iq, y_iq] = preprocess_data( X_path, True)"
+    "    return X_sj, y_sj, X_iq, y_iq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data paths\n",
+    "X_path = 'data-processed/dengue_features_train.csv'\n",
+    "y_path = \"data-processed/dengue_labels_train.csv\"\n",
+    "\n",
+    "# preprocess\n",
+    "interpolation = True\n",
+    "norm          = True\n",
+    "mylag         = 2\n",
+    "interaction   = True\n",
+    "labels        = True\n",
+    "\n",
+    "[X_sj, y_sj, X_iq, y_iq] = preprocess_data(X_path, interpolation, norm, mylag, interaction, labels)\n",
+    "data = [X_sj, y_sj, X_iq, y_iq]\n",
+    "\n",
+    "# save for Edith\n",
+    "prefix = 'min-max-scaling' # for saving\n",
+    "\n",
+    "X_sj.to_csv(\"data-processed/{}_Xsj.csv\".format(prefix))\n",
+    "X_iq.to_csv(\"data-processed/{}_Xiq.csv\".format(prefix))\n",
+    "\n",
+    "y_sj.to_csv(\"data-processed/{}_ysj.csv\".format(prefix))\n",
+    "y_iq.to_csv(\"data-processed/{}_yiq.csv\".format(prefix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "tags": []
    },
@@ -149,34 +188,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Seperate data into train 3/4 vs. test 1/4\n",
     "\n",
     "# San Juan is 936 x 21\n",
-    "X_sj_train = X_sj.iloc[1:701]\n",
+    "X_sj_train = X_sj.iloc[0:701]\n",
     "X_sj_test = X_sj.iloc[701:]\n",
     "\n",
     "# Iquitos is 520x20: split 390 vs 130\n",
-    "X_iq_train = X_iq.iloc[1:391]\n",
+    "X_iq_train = X_iq.iloc[0:391]\n",
     "X_iq_test = X_iq.iloc[391:]\n",
     "\n",
     "# SJ\n",
-    "y_sj_train = y_sj.iloc[1:701]\n",
+    "y_sj_train = y_sj.iloc[0:701]\n",
     "y_sj_test  = y_sj.iloc[701:]\n",
     "\n",
     "# IQ\n",
-    "y_iq_train = y_iq.iloc[1:391]\n",
+    "y_iq_train = y_iq.iloc[0:391]\n",
     "y_iq_test  = y_iq.iloc[391:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "San Juan: 1107.787234042553\n",
+      "Iquitos: 203.12403100775194\n"
+     ]
+    }
+   ],
    "source": [
     "# get MSE to assess preprocessing changes\n",
     "\n",
@@ -200,12 +248,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Submission file\n",
-    "sj_test, sj_y, iq_test, iq_y = preprocess_data('data-processed/dengue_features_test.csv', False)\n",
+    "\n",
+    "# preprocess\n",
+    "X_path        = 'data-processed/dengue_features_test.csv'\n",
+    "interpolation = True\n",
+    "norm          = True\n",
+    "mylag         = 2\n",
+    "interaction   = True\n",
+    "labels        = True\n",
+    "\n",
+    "sj_test, sj_y, iq_test, iq_y = preprocess_data(X_path, interpolation, norm, mylag, interaction, labels)\n",
     "\n",
     "sj_predictions = model_sj.predict(sj_test).astype(int)\n",
     "iq_predictions = model_iq.predict(iq_test).astype(int)\n",
