--- a/my_preproc.ipynb
+++ b/my_preproc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -34,17 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# preprocessing function\n",
-    "\n",
     "def preprocess_data(X_path, interpolation, norm, mylag, interaction, ylabels):\n",
-    "    \n",
+    "# preprocessing function  \n",
     "    # Input: \n",
+    "        # x_path: feature data path\n",
     "        # interpolation: bool, True=backfill, False=forward fill\n",
     "        # norm: True=normalization, false= standardization\n",
     "        # mylag: 1= 1 week for example, use 0 for no lag\n",
@@ -59,7 +58,7 @@
     "    if interpolation==True:\n",
     "        mymethod = 'bfill'\n",
     "    else:\n",
-    "        mymethod = 'bfill'\n",
+    "        mymethod = 'ffill'\n",
     "        \n",
     "    # implement it    \n",
     "    df.fillna(method=mymethod, inplace=True) # bfill: use next valid observation to fill gap\n",
@@ -70,22 +69,15 @@
     "    else:\n",
     "        df = (df - df.mean()) / df.std() # standarization\n",
     "    \n",
-    "    ### add lag of 3 weeks for 4 variables below ###\n",
-    "    \n",
-    "    # and remove original ones\n",
-    "    # max temp, precipitation, humidity and avgerage temp \n",
+    "    ### add lag of mylag weeks and remove original ones ###\n",
     "    lag        = mylag\n",
     "    var2change =  list(df.columns.values)\n",
-    "    #['station_max_temp_c', \n",
-    "                  #'station_precip_mm',\n",
-    "                  #'reanalysis_relative_humidity_percent',\n",
-    "                  #'station_avg_temp_c']\n",
     "\n",
     "    new_names = []\n",
     "    for i,j in enumerate(var2change):\n",
     "        new_names.append( j + '_lag')\n",
     "\n",
-    "        df[new_names[i]] = df[var2change[i]].shift(lag)  # Lagged by 1 time step\n",
+    "        df[new_names[i]] = df[var2change[i]].shift(lag)\n",
     "    \n",
     "        # remove original \n",
     "        df = df.drop(var2change[i],axis=1)\n",
@@ -93,19 +85,13 @@
     "    # remove missing values again because of lag\n",
     "    df.fillna(method=mymethod, inplace=True)\n",
     "\n",
-    "    \n",
     "    ### create interaction features\n",
-    "    \n",
-    "    # humidity above 42 % temperature above 24 degrees\n",
     "    if interaction==True:\n",
     "        df['Humid_X_Temp26'] = np.where((df['reanalysis_relative_humidity_percent_lag'] >= 42) & (df['station_avg_temp_c_lag'] >= 24), 1, 0)\n",
-    "    \n",
-    "    # below one did not work\n",
-    "    # temperature after rain. Use rain vs. lagged temp var\n",
-    "    # df['Temp_X_rain'] = np.where((df['station_precip_mm_lag'] >= 600) & (df['station_avg_temp_c_lag'] >= 24), 1, 0)\n",
     "\n",
     "    # if its not submission, load y data\n",
-    "    if labels==True:\n",
+    "    if ylabels==True:\n",
+    "        \n",
     "        # add predictor to DF to seperate the cities\n",
     "        y_path = \"data-processed/dengue_labels_train.csv\"\n",
     "        y = pd.read_csv(y_path, index_col=[0, 1, 2])\n",
@@ -136,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,29 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# removing variables based on OLS didn't improve things\n",
-    "\n",
-    "# # run OLS, check for non-important variables\n",
-    "# X = sm.add_constant(X_sj, prepend=False)\n",
-    "# y = y_sj\n",
-    "\n",
-    "# Fit and summarize OLS model\n",
-    "# mod = sm.OLS(y, X).fit()\n",
-    "# print(mod.summary())\n",
-    "\n",
-    "# remove some unimportant regressors for San Juan accoding to OLS\n",
-    "# X_sj = X_sj.drop(columns=['ndvi_se','ndvi_sw'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,18 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "San Juan: 1107.787234042553\n",
-      "Iquitos: 203.12403100775194\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get MSE to assess preprocessing changes\n",
     "\n",
@@ -236,19 +191,104 @@
     "    y_pred = rf_regressor.predict(X_test).astype(int)\n",
     "    my_mse = metrics.mean_squared_error(y_test, y_pred)\n",
     "    \n",
-    "    return my_mse, y_pred, rf_regressor\n",
-    "\n",
-    "# output MSE \n",
-    "[mse_sj, sj_pred, model_sj] = get_score(X_sj_train, y_sj_train, X_sj_test, y_sj_test)\n",
-    "print('San Juan: ' + str(mse_sj))\n",
-    "\n",
-    "[mse_iq, iq_pred, model_iq] = get_score(X_iq_train, y_iq_train, X_iq_test, y_iq_test)\n",
-    "print('Iquitos: ' + str(mse_iq))\n"
+    "    return my_mse, y_pred, rf_regressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model evaluation for two cities\n",
+    "[mse_sj, sj_pred, model_sj] = get_score(X_sj_train, y_sj_train, X_sj_test, y_sj_test)\n",
+    "print('San Juan: ' + str(mse_sj))\n",
+    "\n",
+    "[mse_iq, iq_pred, model_iq] = get_score(X_iq_train, y_iq_train, X_iq_test, y_iq_test)\n",
+    "print('Iquitos: ' + str(mse_iq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# plotting predicted timecourses\n",
+    "import plotly.graph_objects as go\n",
+    "import plotly as py\n",
+    "\n",
+    "def prediction_plot(model_prediction, acutal_data, city_name):\n",
+    "    # Inputs:\n",
+    "        # model_prediction = sj_pred\n",
+    "        # acutal_data      = y_sj_test\n",
+    "        # city_name        = 'San Juan'\n",
+    "    length_sj = np.arange(len(model_prediction))\n",
+    "\n",
+    "    trace0 = dict(\n",
+    "        type='scatter', \n",
+    "        x=length_sj, \n",
+    "        y=acutal_data,\n",
+    "        name=\"Actual cases\")\n",
+    "\n",
+    "    trace1 = dict(\n",
+    "        type='scatter', \n",
+    "        x=length_sj, \n",
+    "        y=model_prediction,\n",
+    "        name=\"Predicted cases\")\n",
+    "    \n",
+    "    # Layout\n",
+    "    mylayout = dict(\n",
+    "        title=city_name,\n",
+    "        xaxis=dict(title='Weeks'),\n",
+    "        yaxis=dict(title='Total Cases'))\n",
+    "\n",
+    "    # Figure\n",
+    "    fig = go.Figure(data=[trace0, trace1],layout=mylayout) \n",
+    "    fig.show()\n",
+    "    \n",
+    "    fig.write_image(\"figures/\"+ city_name + \".png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# load Edith's data\n",
+    "\n",
+    "result_iq = pd.read_csv(\"results/iq_All_lagged_and_mm_gb.csv\")\n",
+    "\n",
+    "model_prediction = result_iq['pred_cases']\n",
+    "acutal_data      = result_iq['total_cases']\n",
+    "city_name        = 'Iquitos: Gradient Boosting Classifier'\n",
+    "prediction_plot(model_prediction, acutal_data, city_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "result_sj = pd.read_csv(\"results/sj_All_lagged_and_mm_gb.csv\")\n",
+    "\n",
+    "model_prediction = result_sj['pred_cases']\n",
+    "acutal_data      = result_sj['total_cases']\n",
+    "city_name        = 'San Juan: Gradient Boosting Classifier'\n",
+    "prediction_plot(model_prediction, acutal_data, city_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
